--- a/mystylesheet.css
+++ b/mystylesheet.css
@@ -127,7 +127,8 @@ p {
 
 #content {
 	margin:0;
-	width:80%; min-height:100%;
+	width:80%; 
+	min-height:85%;
 	clear: left;
 	padding: 20px;
 	padding-top:50px;
@@ -251,7 +252,7 @@ button:hover, #submitbtn:hover, .btn:hover {
     padding: 10px 12px;
     border-radius: 6px;
     border: 1px solid #ccc;
-    font-size: 14px;
+    font-size: 16px;
 }
 
 /* Buttons */
@@ -317,7 +318,7 @@ button:hover, #submitbtn:hover, .btn:hover {
 }
 
 .pagination a.active {
-    background-color: #0b447eee;
+    background-color: #8ca2b9ee;
     color: white;
     font-weight: bold;
 }
@@ -401,7 +402,7 @@ button:hover, #submitbtn:hover, .btn:hover {
     padding: 10px;
     border-radius: 8px;
     border: 1px solid #ccc;
-    font-size: 14px;
+    font-size: 16px;
 }
 
 .form-actions {
@@ -411,23 +412,23 @@ button:hover, #submitbtn:hover, .btn:hover {
 
  /* Styling for paragraph tags */
 p {
-    font-size: 18px; /* Increase font size */
-    line-height: 1.6; /* Improve readability with a better line height */
-    color: #333; /* Darker text color for better contrast */
-    margin-bottom: 20px; /* Add some spacing between paragraphs */
-    text-align: center; /* Center-align text for a cleaner look */
+    font-size: 18px; 
+    line-height: 1.6; 
+    color: #333; 
+    margin-bottom: 20px; 
+    text-align: center;
 }
 
-/* Specific styles for the thank-you and logout messages */
+/* Styling for the thank-you and logout messages */
 #thankyou-message, #logout-message {
     font-size: 20px;
     font-weight: bold;
-    color: #2c3e50; /* Darker color for emphasis */
+    color: #2c3e50;
     margin-bottom: 30px;
 }
 
 #redirect a {
-    color: #3498db; /* Make the login link stand out with a bright blue color */
+    color: #3498db;
     font-weight: bold;
     text-decoration: none;
     padding: 10px 15px;
